--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <groupId>com.zsj</groupId>
   <artifactId>zsj_spring_test</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
 
   <name>zsj_spring_test Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
@@ -223,6 +223,14 @@
       <artifactId>commons-logging</artifactId>
       <version>1.1.3</version>
     </dependency>-->
+
+      <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
+      <dependency>
+          <groupId>com.squareup.okhttp3</groupId>
+          <artifactId>okhttp</artifactId>
+          <version>4.9.1</version>
+      </dependency>
+
   </dependencies>
 
   <build>
@@ -273,6 +281,20 @@
                   <target>8</target>
               </configuration>
           </plugin>
+<!--          <plugin>-->
+<!--              <groupId>org.springframework.boot</groupId>-->
+<!--              <artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--              <configuration>-->
+<!--                  <mainClass>com.zsj.core.test</mainClass>-->
+<!--              </configuration>-->
+<!--              <executions>-->
+<!--                  <execution>-->
+<!--                      <goals>-->
+<!--                          <goal>repackage</goal>-->
+<!--                      </goals>-->
+<!--                  </execution>-->
+<!--              </executions>-->
+<!--          </plugin>-->
       </plugins>
       <resources>
       <resource>
