--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,7 +20,7 @@
         <!--加载springmvc.xml配置文件-->
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:springmvc.xml</param-value>
+            <param-value>classpath*:springmvc.xml</param-value>
         </init-param>
         <!--启动服务器，创建该servlet-->
         <load-on-startup>1</load-on-startup>
